# thermoscan

./: .env.example  .gitignore  Cargo.toml  README.md  thermoscan.service
src/: main.rs
