[package]
name = "thermoscan"
version = "1.0.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.1", features = ["serde"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
futures = "0.3.29"
hex = "0.4.3"
pretty_env_logger = "0.5.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
libdbus-sys = { version = "0.2.5", features = ["vendored"], optional = true }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[features]
rpi = ["libdbus-sys"]
